# ai-toolbox

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: db.rs  gpt_interaction.rs  lib.rs  main.rs  utils.rs
src/doc/: book.rs  datamap.rs  mod.rs
src/gpt/: api.json  api.md  api.rs  chat.rs  datamap.rs  error.rs  gpt.rs  mod.rs  token.rs
src/openai/: api.json  api.rs  datamap.rs  error.rs  mod.rs
src/qdrant/: mod.rs
