[package]
name = "ai-toolbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
serde_json = "1.0.92"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.58"
anyhow = "1.0.66"
thiserror = "1.0.37"
chrono = "0.4.23"
derive_more = "0.99.17"
log = "0.4.17"
bytes = "1.3.0"
dotenv = "0.15.0"
qdrant-client = "1.1.0"
tonic = "0.9.1"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
encoding_rs = "0.8.32"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-test = "0.2.4"

